--- a/CSS/style.css
+++ b/CSS/style.css
@@ -25,6 +25,9 @@ ul {
 .content {
     width: 500px;
     margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 footer {
